--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,16 @@
 <html>
+
 <head>
-  <script src="popup.js"></script>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script src="popup.js"></script>
 </head>
+
 <body style="width: 200px">
-  
+    <h3 class="title">下載隊列</h3>
+    <div class="download_queue">
+    </div>
+    <div class="tool_button">
+    </div>
 </body>
+
 </html>
